# Continuum

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/core-api/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/core-api/apis/: __init__.py
backend/core-api/apis/v1/mappers/: __init__.py
backend/core-api/apis/v1/routes/: __init__.py  plans.py  sessions.py
backend/core-api/apis/v1/schemas/requests/: __init__.py
backend/core-api/apis/v1/schemas/responses/: __init__.py
backend/core-api/application/: mappers.py
backend/core-api/application/dtos/: __init__.py
backend/core-api/application/use_cases/: __init__.py
backend/core-api/domain/: __init__.py
backend/core-api/infrastructure/: knowledge_base.py  pedagogical.py
backend/core-api/infrastructure/ai/: claude_exam_analyzer.py  claude_session_tutor.py
backend/core-api/infrastructure/common/: logger_service.py
backend/core-api/persistence/: __init__.py
frontend/platform-web/: Dockerfile  package.json  pnpm-lock.yaml
frontend/platform-web/app/: globals.css  layout.tsx  page.tsx
frontend/platform-web/app/learning/: layout.tsx  page.tsx
frontend/platform-web/app/planning/: layout.tsx  page.tsx
frontend/platform-web/features/learning/: index.ts  types.ts
frontend/platform-web/features/planning/: index.ts  types.ts
frontend/platform-web/shared/domain/: knowledgeBase.ts  mockPlanner.ts  mockTutor.ts  types.ts
frontend/platform-web/shared/lib/: apiClient.ts  ids.ts  storage.ts
(+25 files in other folders)
